--- a/16bit/index.html
+++ b/16bit/index.html
@@ -56,6 +56,7 @@
     <div id="indicator">
       <span id="indicator_"></span>
     </div>
+    <a id="developer" href="mailto:05frill_whirl@icloud.com">제작자</a>
   </header>
   <main id="palette" class="palette-grid">
     <script type="text/javascript">
