--- a/32bit/index.html
+++ b/32bit/index.html
@@ -26,6 +26,7 @@
     <div id="indicator">
       <span id="indicator_"></span>
     </div>
+    <a id="developer" href="mailto:05frill_whirl@icloud.com">제작자</a>
   </header>
   <main class="palette-grid palette-grid-32">
     <script type="text/javascript">
