--- a/lightness/index.html
+++ b/lightness/index.html
@@ -68,6 +68,7 @@
     <div id="indicator">
       <span id="indicator_" style="display: none;"></span>
     </div>
+    <a id="developer" href="mailto:05frill_whirl@icloud.com">제작자</a>
   </header>
   <main class="palette-grid palette-grid-lightness">
     <script type="text/javascript">
