--- a/saturation/index.html
+++ b/saturation/index.html
@@ -8,9 +8,9 @@
   .palette-grid-saturation {
     overflow: scroll;
     grid-template: repeat(17, 28px) / repeat(24, 28px);
-    /* direction: rtl; */
     grid-auto-flow: column;
     max-width: 100%;
+    justify-content: flex-start;
   }
   .h_ {
     opacity: 50%;
@@ -25,6 +25,7 @@
     <div id="indicator">
       <span id="indicator_" style="display: none;"></span>
     </div>
+    <a id="developer" href="mailto:05frill_whirl@icloud.com">제작자</a>
   </header>
   <main class="palette-grid palette-grid-saturation">
     <script type="text/javascript">
