--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <div id="indicator">
       <span id="indicator_"></span>
     </div>
+    <a id="developer" href="mailto:05frill_whirl@icloud.com">제작자</a>
   </header>
   <main id="palette" class="square">
     <script type="text/javascript">
