--- a/saturation/index.html
+++ b/saturation/index.html
@@ -138,9 +138,9 @@
   }
 
   // 색상값 설정
-  box_title.style.backgroundColor = "black";
+  box_title.style.backgroundColor = "hsl(0, " + get_s + "%, 0%)";
   box_title_image.style.backgroundColor = "hsl(0, " + get_s + "%, 50%)";
-  box_title_image.style.color = "black";
+  box_title_image.style.color = "hsl(0, " + get_s + "%, 0%)";
   document.getElementById('title').style.color = "hsl(0, " + get_s + "%, 50%)";
   box_controler.style.backgroundColor = "hsl(0, " + get_s + "%, 50%)";
 
